--- a/exchange-rates-api/.env.testing
+++ b/exchange-rates-api/.env.testing
@@ -62,3 +62,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+EXCHANGE_RATES_API_URL=http://api.exchangeratesapi.io/v1/latest
+EXCHANGE_RATES_API_KEY=8821a8b8456efe92aadbcfa56e491620
+EXCHANGE_RATES_API_SYMBOLS=USD,EUR,AUD,CAD,GBP,JPY,CHF,CNY,INR,MXN,ZAR
